# EnhancedBilibiliSearch

./: .dockerignore  .env.example  .gitignore  COMPLIANCE.md  Dockerfile  PRIVACY.md  README.md  pyproject.toml
deploy/: deploy.sh
docs/: README.md  technical_report.tex
ebsearch/: __init__.py  cli.py  config.py  llm.py  models.py  pipeline.py
ebsearch/account/: __init__.py  config.py  credits.py  db.py  otp.py  router.py  service.py  sms.py  tokens.py
ebsearch/classify/: __init__.py  query.py
ebsearch/classify/tests/: test_classify.py
ebsearch/rank/: select.py
ebsearch/render/: __init__.py  markdown.py
ebsearch/search/: __init__.py  client.py  query.py
ebsearch/server/: __init__.py  app.py
ebsearch/summarize/: __init__.py  fanout.py
ebsearch/synthesize/: __init__.py  report.py
ebsearch/web/: index.html
examples/: sample_report.md
tests/: conftest.py  test_auth_credits.py  test_guardrails.py  test_history.py  test_query.py  test_render.py  test_select.py  test_server.py  test_synthesize.py
