[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "enhanced-bili-search"
version = "0.1.0"
description = "Enhanced Bilibili topic search: rank relevant videos, summarize them, and synthesize one report."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "httpx>=0.26",
]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn>=0.27"]
dev = ["pytest>=7"]
all = ["fastapi>=0.110", "uvicorn>=0.27", "pytest>=7"]

[project.scripts]
ebsearch = "ebsearch.cli:main"

[tool.setuptools.packages.find]
include = ["ebsearch*"]
